# QuadTargetFSM

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  analysis.sh  config.ini  config_sim.ini  get_targets.py  pi_build.sh  pi_config.ini  pi_run.sh
cascades/16/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
cascades/16/HOG/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml
cascades/32/: cascade.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
cascades/32_old/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
cascades/64/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
cascades/64/HOG/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
cfg/: config.ini  config_analysis.ini  config_cascade.ini  config_images.ini  config_measurements.ini  config_otsu.ini  config_pi.ini  config_pi_flight.ini  config_profiling.ini  config_sim.ini  config_states.ini  config_static.ini  config_video.ini  defaults.ini
cfg/pi/: config_flight.ini  config_picam.ini  config_video.ini  defaults.ini
include/: StateMachine.hpp  Target.hpp  TargetFinder.hpp  Utils.h
picam/: CMakeLists.txt  README.md
src/: CameraModel.cpp  CascadeDetector.cpp  ConfigMerger.cpp  Doxyfile.in  FSMDetector.cpp  ImageCycler.cpp  ImageCycler.h  Marker.cpp  Navigator.cpp  PersistentTarget.cpp  SocketCamera.cpp  SocketCamera.h  StateMachine.cpp  Target.cpp  TargetFinder.cpp  TargetFinder.h  Utils.c  main.cpp
src/include/: CameraModel.hpp  ConfigMerger.hpp  Marker.hpp  MarkerDetector.hpp  Navigator.hpp  PersistentTarget.hpp  StateMachine.hpp  Target.hpp  TargetFinder.hpp
src/utils/: ConfigMerger.cpp  ConfigMerger.hpp  ImageCycler.cpp  ImageCycler.hpp  PiCamera.cpp  PiCamera.hpp  SocketCamera.cpp  SocketCamera.hpp  Utils.h
